# Computing_Geometry_Demo

./: .gitignore  README.md
Computing_Geometry/: CMakeLists.txt  Computing_Geometry.cpp  Computing_Geometry.h
Computing_Geometry/Base/: Core.h  Vector.h
Computing_Geometry/Base/Cpp/: Vector.cpp
Computing_Geometry/ComputeGeometryDemo/: EarClipping.cpp  Trangulation.cpp  Triangulation.h
Computing_Geometry/Core/: GeoUtils.cpp  GeoUtils.h
Computing_Geometry/Core/Base/: Core.h  Vector.cpp  Vector.h
Computing_Geometry/Core/ComputeGeometryDemo/: EarClipping.cpp  Polygon.h
Computing_Geometry/Core/Primitive/: Point.h  Polygon.h  PolygonDCEL.h
Computing_Geometry/CppDemo/: FunctionFaker.cpp
Computing_Geometry/CppDemo/Allocator/: JJallocator.cpp  jjaloc.h
Computing_Geometry/CppDemo/Iterator/: itera.cpp
Computing_Geometry/Sample/: Demo.cpp
Computing_Geometry/Thread/: Thread_1.cpp  Thread_2_joinable.cpp  Thread_Demo.cpp  Thread_SubThread.cpp
Computing_Geometry/Thread/ThreadDemo/: 2_launch_a_thread.h
